# Dual_Subtitles

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  subtitles_gen.ipynb
docs/: pipeline.md
src/dual_subtitles/: __init__.py  cli.py  main.py
src/dual_subtitles/core/: __init__.py  config.py  pipeline.py  segmentation.py
src/dual_subtitles/io/: __init__.py  audio.py  subtitle_files.py
src/dual_subtitles/models/: __init__.py  subtitle.py
src/dual_subtitles/services/: diarization.py  transcription.py  translation.py
src/dual_subtitles/utils/: timestamps.py
